tests/sksl/errors/ArrayIndexOutOfRange.glsl
### Compilation failed:

error: 1: index -1 out of range for 'int[123]'
error: 4: index 123 out of range for 'half4x4[123]'
error: 5: index 1000000000 out of range for 'int4[123]'
error: 6: index 3000000000 out of range for 'half3[123]'
error: 7: missing index in '[]'
5 errors
